# etched

./: .clang-tidy  CMakeLists.txt  readme.md
cmake/: etchedConfig.cmake.in
examples/: 01-basic-parsing.cpp  02-boolean-flags.cpp  03-multiple-types.cpp  04-help-option.cpp  05-version-option.cpp  06-custom-callbacks.cpp  07-values-with-spaces.cpp  08-error-handling.cpp  09-integer-ranges.cpp  10-complete-application.cpp  11-custom-types.cpp  CMakeLists.txt
include/etched/: argument_parser.hpp  concepts.hpp  converters.hpp  etched.hpp  helpers.hpp  option.hpp  parsers.hpp  sanitizers.hpp  strings.hpp
tests/: CMakeLists.txt  etched-parser-tests.hpp  etched-tests.cpp  etched-tests.hpp
